# tezqr

./: .dockerignore  .env.example  .env.local.prod.example  .env.server.example  .gitignore  Caddyfile  Caddyfile.local.prod  Dockerfile  README.md  alembic.ini  docker-compose-local.prod.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-server.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_upgrade_request_codes.py  0003_provider_control_plane.py  0004_provider_member_chat_identity.py
docs/: architecture.md  deployment.md  github-actions.md  index.md  learning-roadmap.md  product-tutorial.md
scripts/: smoke-local-prod.sh  start-prod.sh
src/tezqr/: __init__.py
src/tezqr/application/: commands.py  control_plane.py  control_plane_messages.py  control_plane_presenter.py  dto.py  ports.py  provider_bot_commands.py  replies.py  services.py  telegram_menu_commands.py
src/tezqr/domain/: __init__.py  entities.py  enums.py  exceptions.py  value_objects.py
src/tezqr/infrastructure/: container.py  register_webhook.py
src/tezqr/presentation/: app.py  dependencies.py  docs.py  router.py  schemas.py
src/tezqr/shared/: config.py  db.py  time.py
tests/: conftest.py
tests/e2e/: test_control_plane.py  test_webhook.py
tests/integration/: test_persistence.py
tests/unit/application/: test_bot_service.py  test_commands.py  test_control_plane_messages.py  test_provider_bot_commands.py  test_telegram_menu_commands.py
tests/unit/domain/: test_domain_models.py
(+15 files in other folders)
